--- a/qruntime/media/control.html
+++ b/qruntime/media/control.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+ <meta charset="utf-8">
  <link rel="stylesheet" href="/media/tool.css" type="text/css" />
- <link rel="stylesheet" href="/media/css/ui-lightness/jquery-ui-1.8.16.custom.css" type="text/css" />
+ <link rel="stylesheet" href="/media/css/smoothness/jquery-ui-1.8.20.custom.css" type="text/css" />
  <script type="text/javascript" src="/media/jquery-1.7.1.min.js"></script>
- <script type="text/javascript" src="/media/jquery-ui-1.8.16.custom.min.js"></script>
- <script type="text/javascript" src="/media/d3-2.7.0.min.js"></script>
+ <script type="text/javascript" src="/media/jquery-ui-1.8.20.custom.min.js"></script>
+ <script type="text/javascript" src="/media/d3-2.9.2.min.js"></script>
  <script type="text/javascript" src="/media/control.js"></script>
 </head>
 
@@ -22,42 +23,22 @@
 <div id="tabs">
   <ul>
     <li><a href="#tabs-node-control">Node Control</a></li>
-    <li><a href="#tabs-profile">Your Profile</a></li>
-    <li><a href="#tabs-address-book">Address Book</a></li>
-    <li><a href="#tabs-invitations">Accept an Invitation</a></li>
+    <li><a href="#tabs-address-book"><s>Address Book</s></a></li>
+    <li><a href="#tabs-invitations"><s>Accept an Invitation</s></a></li>
   </ul>
   <div id="tabs-node-control">
     <ul>
+      <li>Vat ID: <span class="fixed" id="vatid">?</span></li>
       <li>Webport: <span class="fixed" id="webport">?</span></li>
-      <li>Relay Location: <span class="fixed" id="relay_location">?</span>
-       (<span id="relay_connected">?</span>)</li>
-      <li>Client Pubkey: <span class="fixed" id="pubkey">?</span></li>
+      <li>Message-RX URL: <span class="fixed" id="url">?</span></li>
     </ul>
     <div>Send Message:
       <ul>
-        <li>To: <input id="message-to" type="text" name="address"/></li>
-        <li>Message: <input id="message-message"type="text" name="message"/></li>
+        <li>To QRID: <input id="send-to" type="text" name="qrid"/></li>
+        <li>Args (JSON): <input id="send-args"type="text" name="args"/></li>
         <li><input id="send-message"  type="submit" value="Send!"/></li>
       </ul>
     </div>
-  </div>
-  <div id="tabs-profile">
-    <ul>
-      <li>Name: <span id="profile-name">?</span>
-        <input class="hidden" id="profile-name-input" type="text"/>
-        <a class="small" id="profile-name-open-input" href="#">edit</a>
-      </li>
-      <li> Icon:
-        <div id="profile-icon-drop" class="profile-icon-drop">
-          <img id="profile-icon" alt="(none)" src="">
-        </div>
-        <span class="small">Drag/drop icon image or
-          <a id="profile-open-icon-uploader" href="#">upload</a></span>
-        <!-- FF9 (android) can ask for images from the camera -->
-        <input id="profile-icon-upload" class="hidden"
-               type="file" accept="image/*"/>
-      </li>
-    </ul>
   </div>
   <div id="tabs-address-book">
     <h3>Address Book
