add object-graph retrieval code, update web to show detailed list

--- a/qruntime/media/control.html
+++ b/qruntime/media/control.html
@@ -72,7 +72,16 @@
         </div>
         <div class="object-list-attributes">
           <div><span class="gray">Object ID:</span>
-            <span id="object-list-urbjid"></span>
+            <span id="object-list-id"></span>
+          </div>
+          <div><span class="gray">Type:</span>
+            <span id="object-list-type"></span>
+          </div>
+          <div><span class="gray">SHA256(code):</span>
+            <span id="object-list-codeid"></span>
+          </div>
+          <div><span class="gray"># of powers:</span>
+            <span id="object-list-numpowers"></span>
           </div>
         </div>
       </div>
